samples/_failures_safe/1761553176_5fbf90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e120364.c: In function ‘main’:
./samples/SAFE/__tmp_8e120364.c:136:36: error: missing terminating ' character
  136 |     if (len > 0 && input[len-1] == '\
      |                                    ^~
./samples/SAFE/__tmp_8e120364.c:136:5: error: expected expression at end of input
  136 |     if (len > 0 && input[len-1] == '\
      |     ^~
./samples/SAFE/__tmp_8e120364.c:136:5: error: expected declaration or statement at end of input
